--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*.*.*'   # create a release by tagging vMAJOR.MINOR.PATCH
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -12,6 +12,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         rust: [stable]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,52 +21,39 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt
           profile: minimal
-
-      - name: Setup target (Windows on Windows runner, etc.)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          rustup target add x86_64-unknown-linux-gnu
-      - name: Setup target (mac)
-        if: matrix.os == 'macos-latest'
-        run: |
-          rustup target add x86_64-apple-darwin || true
-      - name: Setup target (windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          rustup target add x86_64-pc-windows-gnu || true
 
       - name: Build release
         run: |
           cd ouro_dag
-          cargo build --release -Zminimal-versions
+          cargo build --release
 
-      - name: Package artifact
+      - name: Package artifact (Linux / mac)
+        if: runner.os != 'Windows'
         run: |
           cd ouro_dag/target/release
           mkdir -p dist
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            cp ouro-node dist/ouro-node-linux-x86_64
-            tar -czf ouro-node-linux-x86_64.tar.gz -C dist ouro-node-linux-x86_64
-            ls -l ouro-node-linux-x86_64.tar.gz
-          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            cp ouro-node dist/ouro-node-macos-x86_64
-            tar -czf ouro-node-macos-x86_64.tar.gz -C dist ouro-node-macos-x86_64
-            ls -l ouro-node-macos-x86_64.tar.gz
+          if [ "${{ runner.os }}" = "Linux" ]; then
+            cp ouro-node dist/ouro-node-linux-x86_64 || true
+            tar -czf ouro-node-linux-x86_64.tar.gz -C dist ouro-node-linux-x86_64 || true
+            ls -l
+          elif [ "${{ runner.os }}" = "macOS" ]; then
+            cp ouro-node dist/ouro-node-macos-x86_64 || true
+            tar -czf ouro-node-macos-x86_64.tar.gz -C dist ouro-node-macos-x86_64 || true
+            ls -l
           fi
 
-      - name: Zip for windows
-        if: matrix.os == 'windows-latest'
+      - name: Package artifact (Windows)
+        if: runner.os == 'Windows'
         run: |
           cd ouro_dag/target/release
-          powershell Compress-Archive -Path ouro-node.exe -DestinationPath ouro-node-windows-x86_64.zip
+          powershell -Command "Compress-Archive -Path ouro-node.exe -DestinationPath ouro-node-windows-x86_64.zip"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: "ouro-node-${{ matrix.os }}"
           path: |
-            oro_dag/target/release/*.tar.gz
+            ouro_dag/target/release/*.tar.gz
             ouro_dag/target/release/*.zip
             ouro_dag/target/release/ouro-node*
