--- a/ouro_dag/Cargo.toml
+++ b/ouro_dag/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# crypto / signing - use v1.x API compatible with PublicKey/Signature::from_bytes
-ed25519-dalek = "1.0"
+# crypto / signing
+ed25519-dalek = { version = "2.0", features = ["rand_core"] }
 
 # serialization / ids / time
 serde = { version = "1.0", features = ["derive"] }
@@ -13,35 +13,44 @@ serde_json = "1.0"
 uuid = { version = "1.4", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 
+once_cell = "1.18"
+
+tokio-rustls = "0.24"
+rustls = "0.21"
+rcgen = "0.9" 
+
 # misc utils
 hex = "0.4"
 sha2 = "0.10"
 log = "0.4"
 env_logger = "0.10"
 
-# async runtime
+# async runtime & networking
 tokio = { version = "1.28", features = ["full"] }
+tracing = "0.1"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 
-# web / networking
+# web frameworks (kept but use as needed)
 actix-web = "4"
 axum = "0.6"
-tracing = "0.1"
-reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
 
 # embedded / light DB (default storage)
 sled = "0.34"
 
-# optional native RocksDB: enable only when you have the native toolchain/libs.
+# optional native RocksDB
 rocksdb = { version = "0.20", optional = true }
+
+# SQL / postgres
+sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time"] }
 
 # helpers
 num_cpus = "1.13"
-sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time"] }
 thiserror = "1.0"
 anyhow = "1.0"
 
-# randomness
-rand = "0.7"
+# randomness (match tests / libs)
+rand = { version = "0.8", features = ["std"] }
+rand_core = "0.6"
 
 # dotenv loader for local dev
 dotenvy = "0.15"
@@ -49,11 +58,29 @@ dotenvy = "0.15"
 # CLI
 clap = { version = "4.2", features = ["derive"] }
 yansi = "0.5"
+bytes = "1.4"
+tokio-util = { version = "0.7", features = ["codec"] }
+futures = "0.3"
+igd = { version = "0.12.1", features = ["aio"] }
+local_ipaddress = "0.1.3"
 
 [features]
 default = []
 with_rocksdb = ["rocksdb"]
 
 [dev-dependencies]
-rand_core = "0.5"
 tempfile = "3.6"
+
+bytes = "1.4"
+futures = "0.3"
+tokio-util = { version = "0.7", features = ["codec"] }
+
+[profile.dev]
+incremental = true
+
+[profile.release]
+incremental = true
+
+
+igd = "0.12"           # async UPnP mapping (best-effort)
+local-ip-address = "0.5" # for local ip detection (small helper)
