--- a/ouro_dag/Cargo.toml
+++ b/ouro_dag/Cargo.toml
@@ -4,83 +4,102 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# crypto / signing
-ed25519-dalek = { version = "2.0", features = ["rand_core"] }
-
-# serialization / ids / time
+tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json"] }
+ed25519-dalek = { version = "2.1.0", features = ["serde", "rand_core"] }
+# Post-quantum cryptography (Phase 6 security hardening)
+pqcrypto-dilithium = "0.5"
+pqcrypto-kyber = "0.8"
+pqcrypto-traits = "0.3"
+sha2 = "0.10"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+hex = "0.4"
+anyhow = "1.0"
+parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = { version = "1.4", features = ["serde", "v4"] }
-chrono = { version = "0.4", features = ["serde"] }
-
-once_cell = "1.18"
-
-tokio-rustls = "0.24"
-rustls = "0.21"
-rcgen = "0.9" 
-
-# misc utils
-hex = "0.4"
-sha2 = "0.10"
-log = "0.4"
-env_logger = "0.10"
-
-# async runtime & networking
-tokio = { version = "1.28", features = ["full"] }
-tracing = "0.1"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
-
-# web frameworks (kept but use as needed)
-actix-web = "4"
-axum = "0.6"
-
-# embedded / light DB (default storage)
 sled = "0.34"
-
-# optional native RocksDB
-rocksdb = { version = "0.20", optional = true }
-
-# SQL / postgres
-sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time"] }
-
-# helpers
-num_cpus = "1.13"
+uuid = { version = "1.4", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+backoff = { version = "0.4", features = ["futures", "tokio"] }
+axum = { version = "0.6", features = ["headers", "json"] }
+axum-server = { version = "0.5", features = ["tls-rustls"] }
+rocksdb = "0.22.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+log = "0.4"
+env_logger = "0.9"
+clap = { version = "4.0", features = ["derive"] }
+igd = { version = "0.11", features = ["aio"] }
+local-ip-address = "0.5"
 thiserror = "1.0"
-anyhow = "1.0"
-
-# randomness (match tests / libs)
-rand = { version = "0.8", features = ["std"] }
-rand_core = "0.6"
-
-# dotenv loader for local dev
-dotenvy = "0.15"
-
-# CLI
-clap = { version = "4.2", features = ["derive"] }
-yansi = "0.5"
+validator = { version = "0.16", features = ["derive"] }
+tower-http = { version = "0.4", features = ["cors"] }
+futures-util = "0.3"
+bincode = "1.3"
+rand = "0.8"
+tokio-stream = "0.1"
+either = "1.8"
+http = "0.2"
+tower = "0.4"
+async-trait = "0.1"
+prometheus = { version = "0.13", features = ["process"] }
+once_cell = "1.17"
+dashmap = "5.4"
+moka = { version = "0.11", features = ["future"] }
+governor = "0.6"
+nonzero_ext = "0.3"
+url = "2.3"
+bs58 = "0.5"
+base64 = "0.21"
+blake2 = "0.10"
+ed25519 = "2.2.0"
+signature = "2.2.0"
+prost = "0.12"
+tonic = { version = "0.10", features = ["tls", "tls-roots"] }
+tonic-build = "0.10"
+prost-types = "0.12"
 bytes = "1.4"
-tokio-util = { version = "0.7", features = ["codec"] }
+http-body = "0.4"
+percent-encoding = "2.2"
+pin-project-lite = "0.2"
+tokio-rustls = "0.24"
+rustls = { version = "0.22", features = ["ring"] }
+rustls-pki-types = "1.0"
+rcgen = "0.11"
+tokio-native-tls = "0.3"
+native-tls = "0.2"
+pem = "2.0"
+x509-parser = "0.15"
+webpki-roots = "0.25"
+rustls-pemfile = "1.0"
+p256 = { version = "0.13", features = ["ecdsa"] }
+ecdsa = "0.16"
+elliptic-curve = "0.13"
+k256 = { version = "0.13", features = ["ecdsa"] }
+secp256k1 = "0.27"
+getrandom = "0.2"
+ring = "0.17"
+untrusted = "0.9"
+yasna = "0.5"
+bit-vec = "0.6"
+num-bigint = "0.4"
+num-integer = "0.1"
+num-traits = "0.2"
+yansi = "0.5"
+dotenvy = "0.15"
 futures = "0.3"
-igd = { version = "0.12.1", features = ["aio"] }
-local_ipaddress = "0.1.3"
+tokio-util = { version = "0.7", features = ["codec"] }
+tokio-socks = "0.5"  # Tor SOCKS5 proxy support for hybrid darkweb operation
 
 [features]
 default = []
-with_rocksdb = ["rocksdb"]
 
 [dev-dependencies]
 tempfile = "3.6"
-
-bytes = "1.4"
-futures = "0.3"
-tokio-util = { version = "0.7", features = ["codec"] }
 
 [profile.dev]
 incremental = true
 
 [profile.release]
 incremental = true
-
-
-igd = "0.12"           # async UPnP mapping (best-effort)
-local-ip-address = "0.5" # for local ip detection (small helper)
